--- a/MAMP-DIRECTORY/hw-6/resources/page.html
+++ b/MAMP-DIRECTORY/hw-6/resources/page.html
@@ -6,8 +6,8 @@
     <title>Image Display</title>
 </head>
 <body>
-<h1>Welcome to My PHP Project</h1>
-<p>Here is the image from the resources folder:</p>
+<h1>Annie's Pizzeria</h1>
 <img src="resources/pizza.jpg" alt="My Image" width="400">
+<p></p>
 </body>
 </html>
